# IDEA

./: CMakeLists.txt  Euler1D.cpp  EulerND.cpp  EulerNDplot.cpp  README.md  test.cpp
src/: CMakeLists.txt
src/KePASSA/: Adams.h  BulirschStoer.h  DAEverhartRadau.h  EllipticOrbit.h  EverhartRadau.h  Leapfrog.h  Midpoint.h  RK4.h  RK78.h  RK8.h  StiefelScheiffele.h  VanDerPol.h  main.cpp  points.cpp  run.sh  save.sh  test_expansion.h
src/KePASSA/Auxiliary/: interv.h
src/KePASSA/Formulations/: Cowell.h
src/KePASSA/Hodei/: propagator.h
src/KePASSA/Integrators/: euler.h  rkf45.h  rkf78.h
src/KePASSA/Perturbations/: ss2b.h
src/KePASSA/SS2bSol/: CMakeLists.txt  build.sh  clean.sh
src/KePASSA/SS2bSol/src/: Main.f90  SS2b.f90
src/KePASSA/SS2bSol/src/DECSOL/: dc_decsol.f  decsol.f
src/KePASSA/SS2bSol/src/Integrator/: RADAU_Core.f  RADAU_Driver.f90
src/include/: idea.h
src/lib/: idea.cpp
src/test/: ideatest.cpp
